--- a/src/styles/LandingPage.css
+++ b/src/styles/LandingPage.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 *{
     padding: 0px;
     margin:0px;
     box-sizing: border-box;
+    font-family: 'poppins' 'sanserif';
 }
 
 .hero-section{
@@ -11,4 +15,102 @@
     justify-content: space-between;
     background-color: #f8f9fa;
     padding: 100px 0;
+}
+
+.hero-left-side h5{
+    font-family: 'poppins';
+    text-align: left;
+    font-size: 12px;
+    font-size: medium;
+    font-weight: 300;
+    margin: 5px;
+}
+
+.hero-left-side h1{
+    font-size: 55px;
+    text-align: left;
+    margin: 5px;
+    font-weight: 700;
+    letter-spacing: 2px;
+}
+
+.hero-left-side h6{
+    color: #6e6e6e;
+    font-size: 15px;
+    font-weight: 400;
+    margin: 5px;
+}
+
+.hero-left-side{
+    width: 1000px;
+    text-align: left;
+    padding: 50px;
+    margin-left: 80px;
+}
+
+.hero-right-side img{
+    width: 100%;
+}
+
+.hero-left-side span{
+    height: 10px;
+    background-color: red;
+    color: red;
+    margin-right: 10px;
+}
+
+.hero-left-side button{
+    margin: 5px;
+}
+
+.services{
+    text-align: center;
+    font-size: 22px;
+}
+
+.services h6{
+    color: #6e6e6e;
+    font-weight: 400;
+}
+
+.services-card {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, auto);
+    gap: 20px;
+    padding: 20px;
+}
+
+.cards {
+    background-color: #fff;
+    height: 250px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    text-align: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.cards:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.cards h2 {
+    font-size: 1.5rem;
+    margin: 10px 0;
+    letter-spacing: 1px;
+}
+
+.cards h6 {
+    font-size: 1rem;
+    color: #6e6e6e;
+    margin: 10px 0;
+    letter-spacing: 0.5px;
+}
+
+.cards .faMessage {
+    font-size: 2rem;
+    color: #FF6700;
+    margin-bottom: 10px;
 }
